feat: refactor authentication code
